--- a/.github/workflows/cli-scripts-deploy-safe-rollout-amlarc-online-endpoints.yml
+++ b/.github/workflows/cli-scripts-deploy-safe-rollout-amlarc-online-endpoints.yml
@@ -34,16 +34,27 @@ jobs:
       continue-on-error: true
     - name: scripts installs
       run: sudo apt-get upgrade -y && sudo apt-get install uuid-runtime jq -y && sudo apt-get install xmlstarlet
-    - name: test script script
-      run: set -e; bash -x deploy-safe-rollout-amlarc-online-endpoints.sh
-      working-directory: cli
     - name: file IcM when fails
-      if: ${{ failure() && github.event_name == 'schedule' }}
+      if: ${{ github.event_name == 'schedule' }}
       run: |
         # download certificates
         export ICM_HOST_NAME=ICM-HOST-PROD
         export ICM_CONNECTOR_ID_NAME=ICM-CONNECTOR-ID-PROD
         export ICM_ROUTING_ID_NAME=ICM-ROUTING-ID-PROD
+        set -e; bash -x .github/amlarc-tool.sh download_icm_cert
+        export ICM_HOST=$(cat icm_host)
+        export CONNECTOR_ID=$(cat icm_connector_id)
+        export ROUTING_ID=$(cat icm_routing_id)
+        export SUMMARY=$(set -e; bash -x .github/amlarc-tool.sh gen_summary_for_github_test)
+        set -e; bash -x .github/amlarc-tool.sh file_icm
+      timeout-minutes: 30
+    - name: file IcM when fails
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      run: |
+        # download certificates
+        export ICM_HOST_NAME=ICM-HOST-AML-EXAMPLES
+        export ICM_CONNECTOR_ID_NAME=ICM-CONNECTOR-ID-AML-EXAMPLES
+        export ICM_ROUTING_ID_NAME=ICM-ROUTING-ID-AML-EXAMPLES
         set -e; bash -x .github/amlarc-tool.sh download_icm_cert
         export ICM_HOST=$(cat icm_host)
         export CONNECTOR_ID=$(cat icm_connector_id)
